--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,7 @@
     </header>
 
     <div class="wrapper">
+        <span class="icon-close"><ion-icon name="close"></ion-icon></span>
         <div class="form-box login">
             <h2>Login</h2>
             <form action="#">
@@ -40,6 +41,10 @@
                     <a href="#">Forgot Password?</a>
                 </div>
                 <button type="submit" class="btn">Login</button>
+                <div class="login-register">
+            <p> Don't have an account?<a href="#" 
+                class ="register-link">Register</a></p>
+            </div>
             </form>
         </div>
     </div>
