--- a/public/index.html
+++ b/public/index.html
@@ -60,13 +60,13 @@
                     <label>Username</label>
                 </div>
                 <div class="input-box">
-                    <span class="icon"><ion-icon name="lock-closed"></ion-icon></span>
-                    <input type="password" required>
+                    <span class="icon"><ion-icon name="mail"></ion-icon></span>
+                    <input type="email" required>
                     <label>Email</label>
                 </div>
                 <div class="input-box">
-                    <span class="icon"><ion-icon name="mail"></ion-icon></span>
-                    <input type="text" required>
+                    <span class="icon"><ion-icon name="lock-closed"></ion-icon></span>
+                    <input type="password" required>
                     <label>Password</label>
                 </div>
                 <div class="remember-forgot">
