--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Website With Login & Registration</title>
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="./assests/style.css">
 </head>
 
 <body>
@@ -85,7 +85,7 @@
 
     
     
-    <script src="script.js"></script>
+    <script src="./assests/script.js"></script>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 
